--- a/static/fonts/fonts.css
+++ b/static/fonts/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-Thin.woff2') format('woff2'),
        url('/fonts/TTNorms-Thin.woff') format('woff');
   font-weight: 100;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-ThinItalic.woff2') format('woff2'),
        url('/fonts/TTNorms-ThinItalic.woff') format('woff');
   font-weight: 100;
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-Light.woff2') format('woff2'),
        url('/fonts/TTNorms-Light.woff') format('woff');
   font-weight: 300;
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-LightItalic.woff2') format('woff2'),
        url('/fonts/TTNorms-LightItalic.woff') format('woff');
   font-weight: 300;
@@ -35,16 +35,16 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
-  src: url('/fonts/TTNorms-Regular.woff2') format('woff2'),
-       url('/fonts/TTNorms-Regular.woff') format('woff');
+  font-family: 'TTNorms2';
+  src: url('/fonts/TTNorms-Regular2.woff2') format('woff2'),
+       url('/fonts/TTNorms-Regular2.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: auto;
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-Italic.woff2') format('woff2'),
        url('/fonts/TTNorms-Italic.woff') format('woff');
   font-weight: normal;
@@ -53,16 +53,16 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
-  src: url('/fonts/TTNorms-Medium.woff2') format('woff2'),
-       url('/fonts/TTNorms-Medium.woff') format('woff');
+  font-family: 'TTNorms2';
+  src: url('/fonts/TTNorms-Medium2.woff2') format('woff2'),
+       url('/fonts/TTNorms-Medium2.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: auto;
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-MediumItalic.woff2') format('woff2'),
        url('/fonts/TTNorms-MediumItalic.woff') format('woff');
   font-weight: 500;
@@ -71,16 +71,16 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
-  src: url('/fonts/TTNorms-Bold.woff2') format('woff2'),
-       url('/fonts/TTNorms-Bold.woff') format('woff');
+  font-family: 'TTNorms2';
+  src: url('/fonts/TTNorms-Bold2.woff2') format('woff2'),
+       url('/fonts/TTNorms-Bold2.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: auto;
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-BoldItalic.woff2') format('woff2'),
        url('/fonts/TTNorms-BoldItalic.woff') format('woff');
   font-weight: bold;
@@ -89,7 +89,7 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-ExtraBold.woff2') format('woff2'),
        url('/fonts/TTNorms-ExtraBold.woff') format('woff');
   font-weight: 800;
@@ -98,7 +98,7 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-ExtraBoldItalic.woff2') format('woff2'),
        url('/fonts/TTNorms-ExtraBoldItalic.woff') format('woff');
   font-weight: 800;
@@ -107,16 +107,16 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
-  src: url('/fonts/TTNorms-Heavy.woff2') format('woff2'),
-       url('/fonts/TTNorms-Heavy.woff') format('woff');
+  font-family: 'TTNorms2';
+  src: url('/fonts/TTNorms-Heavy2.woff2') format('woff2'),
+       url('/fonts/TTNorms-Heavy2.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: auto;
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-HeavyItalic.woff2') format('woff2'),
        url('/fonts/TTNorms-HeavyItalic.woff') format('woff');
   font-weight: 900;
@@ -125,16 +125,16 @@
 }
 
 @font-face {
-  font-family: 'TTNorms';
-  src: url('/fonts/TTNorms-Black.woff2') format('woff2'),
-       url('/fonts/TTNorms-Black.woff') format('woff');
+  font-family: 'TTNorms2';
+  src: url('/fonts/TTNorms-Black2.woff2') format('woff2'),
+       url('/fonts/TTNorms-Black2.woff') format('woff');
   font-weight: 1000;
   font-style: normal;
   font-display: auto;
 }
 
 @font-face {
-  font-family: 'TTNorms';
+  font-family: 'TTNorms2';
   src: url('/fonts/TTNorms-BlackItalic.woff2') format('woff2'),
        url('/fonts/TTNorms-BlackItalic.woff') format('woff');
   font-weight: 1000;
